Add optional vocal separation (Demucs) + Colab setup

--- a/config.template.ini
+++ b/config.template.ini
@@ -33,3 +33,15 @@ default_target_language = zh
 
 # 是否使用DeepSeek润色
 use_deepseek_polish = false
+
+[Audio]
+# 是否启用人声分离（Demucs，可改善背景音乐/嘈杂场景的识别）
+# 需要额外安装：pip install demucs
+enable_vocal_separation = false
+
+# Demucs 模型名（常用：htdemucs / htdemucs_ft / mdx_extra）
+vocal_separation_model = htdemucs
+
+# 人声分离设备：auto / cpu / cuda
+# 建议：当翻译服务占用GPU显存较多时，设为 cpu 避免 OOM
+vocal_separation_device = auto
