GPU: use Demucs on cuda + clear VRAM before tasks

--- a/config.template.ini
+++ b/config.template.ini
@@ -27,6 +27,11 @@ use_gpu = true
 # beam_size (1-5，越大质量越好但越慢)
 beam_size = 3
 
+[GPU]
+# 是否在 GPU 重任务前清理 CUDA 显存缓存（torch.cuda.empty_cache）
+# 可降低 OOM 概率，但会略慢一些
+clear_cuda_cache_before_tasks = false
+
 [Translation]
 # 默认目标语言
 default_target_language = zh
@@ -43,5 +48,5 @@ enable_vocal_separation = false
 vocal_separation_model = htdemucs
 
 # 人声分离设备：auto / cpu / cuda
-# 建议：当翻译服务占用GPU显存较多时，设为 cpu 避免 OOM
+# 建议：若服务端模型占用显存较多导致 OOM，可设为 cpu；否则可用 auto/cuda 加速
 vocal_separation_device = auto
