ASR: 分块识别进度条

--- a/config.template.ini
+++ b/config.template.ini
@@ -32,6 +32,14 @@ beam_size = 3
 # 可降低 OOM 概率，但会略慢一些
 clear_cuda_cache_before_tasks = false
 
+[ASR]
+# ASR 分块识别（可显示进度条，也可降低长音频导致的 500/OOM 概率）
+# 0=禁用；建议长视频可设 300（5分钟）左右
+chunk_sec = 0
+
+# 分块重叠秒数（避免切在单词中间；会产生少量重复，程序会尽量去重）
+chunk_overlap_sec = 0.5
+
 [Translation]
 # 默认目标语言
 default_target_language = zh
