Colab: 按需加载/卸载 ASR 与翻译模型

--- a/config.template.ini
+++ b/config.template.ini
@@ -11,6 +11,15 @@ deepseek_api_key =
 host = 127.0.0.1
 port = 50515
 
+# 是否启动时预加载模型（false=预加载；true=按需通过 /models/load 加载）
+lazy_load_models = false
+
+# 是否由 batch_translate.py 按需加载/卸载服务端模型（适合显存紧张环境，如 Colab T4）
+manage_models = false
+
+# 是否在 ASR/翻译完成后卸载模型释放显存（会降低连续处理速度）
+unload_models_after_tasks = false
+
 [Models]
 # ASR模型大小: tiny, base, small, medium, large-v3
 asr_model_size = medium
