--- a/config.template.ini
+++ b/config.template.ini
@@ -42,6 +42,10 @@ beam_size = 3
 clear_cuda_cache_before_tasks = false
 
 [ASR]
+# 指定音频语言（可提升嘈杂场景的识别稳定性；填错会变差）
+# 备选示例：auto / en / zh / ja / ko / de / fr / es / ru / ar
+language = auto
+
 # ASR 分块识别（可显示进度条，也可降低长音频导致的 500/OOM 概率）
 # 0=禁用；建议长视频可设 300（5分钟）左右
 chunk_sec = 0
