--- a/config.template.ini
+++ b/config.template.ini
@@ -71,3 +71,5 @@ vocal_separation_model = htdemucs
 # 人声分离设备：auto / cpu / cuda
 # 建议：若服务端模型占用显存较多导致 OOM，可设为 cpu；否则可用 auto/cuda 加速
 vocal_separation_device = auto
+
+# 说明：超长音频会自动分段运行 Demucs，避免一次性加载导致 CPU 内存 OOM（exit code=-9）
