Colab/Docs: increase ASR chunk length defaults

--- a/config.template.ini
+++ b/config.template.ini
@@ -47,11 +47,11 @@ clear_cuda_cache_before_tasks = false
 language = auto
 
 # ASR 分块识别（可显示进度条，也可降低长音频导致的 500/OOM 概率）
-# 0=禁用；建议长视频可设 300（5分钟）左右
+# 0=禁用；建议从 900（15分钟）起步，不稳定再降到 600/300
 chunk_sec = 0
 
 # 分块重叠秒数（避免切在单词中间；会产生少量重复，程序会尽量去重）
-chunk_overlap_sec = 0.5
+chunk_overlap_sec = 1.0
 
 [Translation]
 # 默认目标语言
