--- a/config.template.ini
+++ b/config.template.ini
@@ -72,4 +72,8 @@ vocal_separation_model = htdemucs
 # 建议：若服务端模型占用显存较多导致 OOM，可设为 cpu；否则可用 auto/cuda 加速
 vocal_separation_device = auto
 
+# Demucs 分段秒数（仅对超长/超大音频触发；默认 1800=30分钟）
+# 分段越大越不容易产生边界接缝，但越吃内存；如仍 OOM 可降到 600/300
+vocal_separation_chunk_sec = 1800
+
 # 说明：超长音频会自动分段运行 Demucs，避免一次性加载导致 CPU 内存 OOM（exit code=-9）
