Config: use NLLB 1.3B non-distilled by default

--- a/config.template.ini
+++ b/config.template.ini
@@ -24,11 +24,12 @@ unload_models_after_tasks = false
 # ASR模型大小: tiny, base, small, medium, large-v3
 asr_model_size = medium
 
-# 翻译模型: 
-#   facebook/nllb-200-distilled-1.3B (高质量，推荐)
-#   facebook/nllb-200-distilled-600M (快速)
+# 翻译模型:
+#   facebook/nllb-200-1.3B (最高质量，较慢)
+#   facebook/nllb-200-distilled-1.3B (质量接近，更快/更省资源)
+#   facebook/nllb-200-distilled-600M (更快)
 #   facebook/m2m100_418M (最快)
-translation_model = facebook/nllb-200-distilled-1.3B
+translation_model = facebook/nllb-200-1.3B
 
 # 是否使用GPU
 use_gpu = true
