--- a/config.template.ini
+++ b/config.template.ini
@@ -61,6 +61,11 @@ default_target_language = zh
 # 是否使用DeepSeek润色
 use_deepseek_polish = false
 
+[Subtitles]
+# 字幕格式：srt / ass
+# ass 支持样式/更清晰；若要“软字幕内封ass”，推荐用 MKV 容器（脚本会自动处理）
+format = srt
+
 [Audio]
 # 是否启用人声分离（Demucs，可改善背景音乐/嘈杂场景的识别）
 # 需要额外安装：pip install demucs
