Fix subtitle lingering by clamping long end times

--- a/config.template.ini
+++ b/config.template.ini
@@ -66,6 +66,16 @@ use_deepseek_polish = false
 # ass 支持样式/更清晰；若要“软字幕内封ass”，推荐用 MKV 容器（脚本会自动处理）
 format = srt
 
+# 修复字幕“滞留”：当 ASR 的 end 时间异常过长（常见于长静音/场景切换）时，按可读时长自动收缩 end，
+# 避免一句话结束后字幕一直显示到下一句出现。
+fix_linger = true
+
+# 估算阅读参数（可按个人习惯调整）
+min_duration_sec = 1.2
+max_duration_sec = 12.0
+chars_per_sec = 8.0
+linger_slack_sec = 0.5
+
 [Audio]
 # 是否启用人声分离（Demucs，可改善背景音乐/嘈杂场景的识别）
 # 需要额外安装：pip install demucs
