Make subtitle linger fix more conservative

--- a/config.template.ini
+++ b/config.template.ini
@@ -72,9 +72,14 @@ fix_linger = true
 
 # 估算阅读参数（可按个人习惯调整）
 min_duration_sec = 1.2
-max_duration_sec = 12.0
-chars_per_sec = 8.0
-linger_slack_sec = 0.5
+max_duration_sec = 20.0
+chars_per_sec = 5.0
+linger_slack_sec = 0.8
+
+# 更保守的“滞留判断”：只有当某段时长明显异常（> 可读时长的多倍）才收缩，避免字幕提前结束
+linger_trigger_sec = 6.0
+linger_trigger_ratio = 6.0
+linger_keep_ratio = 4.0
 
 [Audio]
 # 是否启用人声分离（Demucs，可改善背景音乐/嘈杂场景的识别）
