Default ASR to ReazonSpeech

--- a/config.template.ini
+++ b/config.template.ini
@@ -21,8 +21,9 @@ manage_models = false
 unload_models_after_tasks = false
 
 [Models]
-# ASR模型大小: tiny, base, small, medium, large-v3
-asr_model_size = medium
+# ASR模型大小: tiny, base, small, medium, large-v3, reazonspeech
+# reazonspeech 为日语优化模型（transformers 后端）；如需自定义，可用 reazonspeech:HF模型名
+asr_model_size = reazonspeech
 
 # 翻译模型:
 #   facebook/nllb-200-1.3B (最高质量，较慢)
