Add transformers ASR chunking controls

--- a/config.template.ini
+++ b/config.template.ini
@@ -55,6 +55,11 @@ chunk_sec = 0
 # 分块重叠秒数（避免切在单词中间；会产生少量重复，程序会尽量去重）
 chunk_overlap_sec = 1.0
 
+# Transformers ASR 内部分块（仅对 reazonspeech / transformers 后端生效）
+# 默认 30s/5s 可显著降低长音频 OOM/掉线风险；如稳定可调大或设 0 禁用
+transformers_chunk_sec = 30
+transformers_stride_sec = 5.0
+
 [Translation]
 # 默认目标语言
 default_target_language = zh
