Default to Sakura LLM translation

--- a/config.template.ini
+++ b/config.template.ini
@@ -26,11 +26,12 @@ unload_models_after_tasks = false
 asr_model_size = reazonspeech
 
 # 翻译模型:
+#   SakuraLLM/Sakura-7B (日->中更好，需较大显存)
 #   facebook/nllb-200-1.3B (最高质量，较慢)
 #   facebook/nllb-200-distilled-1.3B (质量接近，更快/更省资源)
 #   facebook/nllb-200-distilled-600M (更快)
 #   facebook/m2m100_418M (最快)
-translation_model = facebook/nllb-200-1.3B
+translation_model = SakuraLLM/Sakura-7B
 
 # 是否使用GPU
 use_gpu = true
