--- a/config.template.ini
+++ b/config.template.ini
@@ -31,6 +31,8 @@ asr_model_size = reazonspeech
 #   facebook/nllb-200-distilled-1.3B (质量接近，更快/更省资源)
 #   facebook/nllb-200-distilled-600M (更快)
 #   facebook/m2m100_418M (最快)
+#   gguf:/path/to/model.gguf (使用 llama.cpp 后端)
+#   gguf:hf:repo_id@filename.gguf (从 HF 下载，需要 HF_TOKEN)
 translation_model = SakuraLLM/Sakura-4B-Qwen3-Base-v2
 
 # 是否使用GPU
@@ -67,6 +69,21 @@ default_target_language = zh
 
 # 是否使用DeepSeek润色
 use_deepseek_polish = false
+
+[GGUF]
+# 仅当 translation_model 为 gguf:* 时生效（llama.cpp 后端）
+# 需要先安装：pip install llama-cpp-python
+# 上下文长度
+n_ctx = 4096
+# GPU 层数（-1=全层，0=CPU）
+n_gpu_layers = -1
+# 线程数 / batch
+n_threads = 4
+n_batch = 256
+# 采样参数（温度/Top-p/重复惩罚）
+temperature = 0.1
+top_p = 0.9
+repeat_penalty = 1.05
 
 [Subtitles]
 # 字幕格式：srt / ass
