Default to Sakura 7B GGUF model

--- a/config.template.ini
+++ b/config.template.ini
@@ -32,8 +32,8 @@ asr_model_size = reazonspeech
 #   facebook/nllb-200-distilled-600M (更快)
 #   facebook/m2m100_418M (最快)
 #   gguf:/path/to/model.gguf (使用 llama.cpp 后端)
-#   gguf:hf:repo_id@filename.gguf (从 HF 下载，需要 HF_TOKEN)
-translation_model = SakuraLLM/Sakura-4B-Qwen3-Base-v2
+#   gguf:hf:repo_id@filename.gguf (从 HF 下载，需要 HF_TOKEN 或 gated 授权)
+translation_model = gguf:hf:SakuraLLM/Sakura-7B-Qwen2.5-v1.0-GGUF@sakura-7b-qwen2.5-v1.0-iq4xs.gguf
 
 # 是否使用GPU
 use_gpu = true
