Fix subtitle linger and add prebuilt llama-cpp wheel

--- a/config.template.ini
+++ b/config.template.ini
@@ -63,6 +63,13 @@ chunk_overlap_sec = 1.0
 transformers_chunk_sec = 30
 transformers_stride_sec = 5.0
 
+# Demucs 人声分离后自动回退到原始混音（避免分离导致的“长空洞/提前结束”）
+# 当人声轨出现异常大空洞或字幕提前结束时，自动改用原始混音重新识别
+fallback_to_mix = true
+# 触发回退的阈值（秒）：最大空洞 / 末尾缺失
+fallback_max_gap_sec = 45
+fallback_end_diff_sec = 60
+
 [Translation]
 # 默认目标语言
 default_target_language = zh
@@ -120,5 +127,9 @@ vocal_separation_device = auto
 # Demucs 分段秒数（仅对超长/超大音频触发；默认 1800=30分钟）
 # 分段越大越不容易产生边界接缝，但越吃内存；如仍 OOM 可降到 600/300
 vocal_separation_chunk_sec = 1800
+
+# 人声与原始混音的融合比例（0=仅人声；0.2=加入20%原始混音，减少漏词/空洞）
+# 建议范围：0.1 ~ 0.4；越大越接近原音（噪声也会更多）
+vocal_mix_ratio = 0.0
 
 # 说明：超长音频会自动分段运行 Demucs，避免一次性加载导致 CPU 内存 OOM（exit code=-9）
