Improve ASR fallback for vocal separation

--- a/config.template.ini
+++ b/config.template.ini
@@ -104,12 +104,12 @@ fix_linger = true
 # 估算阅读参数（可按个人习惯调整）
 min_duration_sec = 1.2
 max_duration_sec = 20.0
-chars_per_sec = 5.0
+chars_per_sec = 8.0
 linger_slack_sec = 0.8
 
-# 更保守的“滞留判断”：只有当某段时长明显异常（> 可读时长的多倍）才收缩，避免字幕提前结束
+# “滞留判断”：只有当某段时长明显异常（> 可读时长的多倍）才收缩，避免字幕提前结束
 linger_trigger_sec = 6.0
-linger_trigger_ratio = 6.0
+linger_trigger_ratio = 4.0
 linger_keep_ratio = 4.0
 
 [Audio]
@@ -128,7 +128,7 @@ vocal_separation_device = auto
 # 分段越大越不容易产生边界接缝，但越吃内存；如仍 OOM 可降到 600/300
 vocal_separation_chunk_sec = 1800
 
-# 人声与原始混音的融合比例（0=仅人声；0.2=加入20%原始混音，减少漏词/空洞）
+# 人声与原始混音的融合比例（用于回退时补齐空洞；0=仅人声）
 # 建议范围：0.1 ~ 0.4；越大越接近原音（噪声也会更多）
 vocal_mix_ratio = 0.0
 
